--- a/.github/workflows/docker_test_1.yml
+++ b/.github/workflows/docker_test_1.yml
@@ -18,4 +18,4 @@ jobs:
 
     - name: Run tests which requires docker 1
       run: |
-        go run test.go -docker=true --follow -shard 10
+        go run test.go -docker=true --flavor mysql80 --follow -shard 10
