--- a/build.env
+++ b/build.env
@@ -27,6 +27,8 @@ mkdir -p vthook
 export VTROOT="$PWD"
 export VTDATAROOT="${VTDATAROOT:-${VTROOT}/vtdataroot}"
 export PATH="$PWD/bin:$PATH"
+# Adding following environment, so that go 1.15 works properly for tls connection with binlog server for pitr(Point-in-time-recovery)
+GODEBUG=x509ignoreCN=0
 
 mkdir -p "$VTDATAROOT"
 
